--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -11,3 +11,15 @@ html {
 header img {
   width: 100%;
 }
+
+header {
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+h1 {
+  color: beige;
+  position: absolute;
+  width: 100%;
+  top: 50%;
+}
