make fancy title

--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -23,6 +23,11 @@ h1 {
   position: absolute;
   width: 100%;
   top: 50%;
+  transition: all 1s;
+}
+
+h1:hover {
+  font-size: 90px;
 }
 
 section {
