--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -39,3 +39,15 @@ section {
   margin: auto;
   display: block;
 }
+
+#recipeInfo {
+  margin: auto;
+  width: 30%;
+  display: block;
+}
+
+#cookingInfo {
+  margin: auto;
+  width: 28%;
+  display: block;
+}
